# customer-churn-prediction_project

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
models/: CatBoost.joblib  GradientBoosting.joblib  LightGBM.joblib  LightGBM_best_params.joblib  LogisticRegression.joblib  XGBoost.joblib  XGBoost_best.joblib  XGBoost_best_params.joblib  X_test.joblib  feature_names.joblib  final_model.joblib  models_summary.csv  y_test.joblib  y_train.joblib
notebooks/: internet_churn_project.ipynb
